finished instructions page

--- a/app/src/main/assets/instructions.html
+++ b/app/src/main/assets/instructions.html
@@ -13,7 +13,94 @@
 
 <body>
     <div>
-        test.
+        <h3>CookHelper Instructions</h3>
+        <hr>
+        <div>
+            <h4>Viewing/Deleting Recipes</h4>
+            <p>
+                To view the list of recipes, tap the <i>Recipe List</i> button from the main screen.
+                A list of recipes will be displayed. To open a recipe, simply tap on its name.
+            </p>
+            <p>
+                To delete a recipe from the list, click on the <i>Edit</i> button in the top
+                right corner of the <i>Recipe List</i> page. A list of checkboxes will pop up
+                next to each recipe's name. Select the recipe(s) you would like to delete, and press
+                the <i>Delete</i> button to remove them from the list.
+            </p>
+            <p>
+                To exit the delete recipe mode, simply press the <i>Cancel</i> button.
+            </p>
+        </div>
+        <hr>
+        <div>
+            <h4>Editing a Recipe</h4>
+            <p>
+                An open recipe may be edited by tapping on the <i>Edit</i> button. This will
+                make all the recipe's fields editable. To save your changes,
+                tap on the <i>OK</i> button.
+                To discard all changes, tap on the <i>Cancel</i> button.
+            </p>
+        </div>
+        <hr>
+        <div>
+            <h4>Adding a Recipe</h4>
+            <p>
+                Recipes are added by tapping the <i>Add</i> button on the <i>Recipe List</i>
+                page. A new window will pop up containing a blank recipe. Edit the recipe as
+                desired, and tap the <i>OK</i> button to save your changes.
+            </p>
+        </div>
+        <hr>
+        <div>
+            <h4>Searching for Recipes</h4>
+            <p>
+                To search for recipes from the recipe list, tap the <i>Search Recipes</i> button
+                on the main screen. Searches may be performed by Ingredient/Category/Country.
+            </p>
+            <p>
+                The following boolean operators may be used to combine search terms:
+            </p>
+            <ul>
+                <li> AND </li>
+                <li> OR </li>
+                <li> NOT </li>
+            </ul>
+            <p>
+                When more than one boolean operator is used, precedence of operations MUST be
+                indicated with parentheses. For example, to search for the AND of three ingredients,
+            </p>
+            <div style="padding:12px;background-color:#d3d3d3;line-height:1.4;">
+                (Ingredient1 AND Ingredient2) AND Ingredient3
+            </div>
+            <p>
+                is the required input. Note that,
+            </p>
+            <div style="padding:12px;background-color:#d3d3d3;line-height:1.4;">
+                Ingredient1 AND Ingredient2 AND Ingredient3
+            </div>
+            <p>
+                is <i>not</i> correct.
+            </p>
+            <p>
+                Similarly, for the AND/OR of three ingredients,
+            </p>
+            <div style="padding:12px;background-color:#d3d3d3;line-height:1.4;">
+                <font size = "1">
+                    ((Ingredient1 AND Ingredient2) OR Ingredient3) AND Ingredient4
+                </font>
+            </div>
+            <p>
+                is the required input.
+            </p>
+            <p>
+                Search results are sorted by the number of matching search terms. Recipes
+                with the most matching search terms will be at the top, and the rest follow
+                in descending order.
+            </p>
+
+
+
+        </div>
     </div>
 
 
